# deterministic-horizon

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.claude/: settings.local.json
.github/: markdown-link-check.json
.github/ISSUE_DRAFTS/: 001-docs-quickstart-gif.md  002-bug-cli-train-stub.md  003-test-policy-table3-snapshot.md  004-docs-publish-mkdocs.md  005-feat-gemini-adapter.md  006-feat-together-adapter.md  007-feat-resumable-evaluate.md  008-feat-hf-spaces-demo.md  009-docs-readme-i18n-cn.md  010-feat-swe-bench-state.md  011-feat-sql-multi-task.md  012-perf-async-batched-eval.md  013-research-mamba-decoherence.md  014-research-moe-decoherence.md  README.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  docs.yml  pages.yml
analysis/: accuracy_by_depth.md  conditions.md  horizon.json
assets/demo-gif-generator-scripts/: Makefile  code-run.tape  open-image.tape
configs/experiment/: main.yaml
configs/model/: claude-4.5-sonnet.yaml  gpt-4o.yaml
configs/task/: permutation.yaml
data/sample/: permutation_n8.json
docs/: README.md  architecture.md  faq.md  horizon-explorer.html  index.html  reproducing.md  roadmap.md  theorem-cheatsheet.md  when-to-delegate.md
examples/: demo.py  finetune_smoke.py
notebooks/: 01_quickstart.ipynb
paper/: ICML2026_DeterministicHorizon_CameraReady.tex  ICML2026_DeterministicHorizon_FINAL.tex  references.bib
results/sample/: synthetic_results.json
scripts/: backfill_issues.ps1  regenerate_sample_data.py  seed_issues.ps1  seed_issues.sh
src/: __init__.py  analysis.py  cli.py  config.py  policy.py
src/deterministic_horizon/: __init__.py  analysis.py  cli.py  config.py  policy.py  runners.py
src/deterministic_horizon/metrics/: __init__.py  sfe.py  ssj.py  statistics.py
src/deterministic_horizon/models/: __init__.py  anthropic_models.py  base.py  deepseek_models.py  local_models.py  openai_models.py
src/deterministic_horizon/tasks/: __init__.py  arithmetic.py  base.py  fsa.py  permutation.py
src/deterministic_horizon/training/: finetune.py
src/metrics/: ssj.py
src/models/: local_models.py
src/tasks/: __init__.py  arithmetic.py  base.py  fsa.py  permutation.py
src/training/: __init__.py
tests/: test_analysis.py  test_cli_train.py  test_metrics.py  test_policy.py  test_policy_snapshot.py  test_smoke.py  test_tasks.py
tests/snapshots/: model_horizons.json
